# CHANGELOG

## 0.5.0 -> 0.6.0

* pixops.isEqual() -> properties.isEqual()
* when the second object in properties.isEqual(jim1, jim2) is empty, return
  False if the first one not, instead of raising a ValueError
* geometry.extractSample() geometry.sample()
* geometry.aggregateVector(), geometry.extractImg() and
  geometry.extractVector() merged into geometry.extract()
* added support of properties.isEqual() for JimVects
* multiple Jim objects allowed as arguments for geometry.stackPlane()
* added support of Jim.geometry.stackPlane() with only one Jim parameter
* added support of JimList.geometry.stackPlane(JimList)
* custom exceptions used instead of the Python default ones where it made sanse